--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
     "last 2 versions",
     "not ie < 11"
   ],
+  "scripts": {
+    "build": "npx gulp build",
+    "watch": "npx gulp watch"
+  },
   "devDependencies": {
-    "@11ty/eleventy": "^0.9.0",
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "acorn": "^7.1.1",
-    "autoprefixer": "^9.7.3",
-    "babel-loader": "^8.0.6",
+    "@11ty/eleventy": "^0.11.0",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "acorn": "^7.2.0",
+    "autoprefixer": "^9.8.0",
+    "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.7",
     "cssnano": "^4.1.10",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
+    "eslint": "^7.1.0",
+    "eslint-loader": "^4.0.2",
     "gulp": "^4.0.2",
+    "gulp-cli": "^2.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
-    "moment": "^2.24.0",
-    "webpack": "^4.41.4"
+    "gulp-sass": "^4.1.0",
+    "moment": "^2.26.0",
+    "webpack": "^4.43.0"
   }
 }
