--- a/package.json
+++ b/package.json
@@ -10,29 +10,39 @@
   },
   "browserslist": [
     "last 2 versions",
-    "not ie < 11"
+    "not ie <= 11"
   ],
   "scripts": {
-    "build": "npx gulp build",
-    "watch": "npx gulp watch"
+    "clean": "rimraf './dist'",
+    "styles:dev": "sass './src/assets/scss/main.scss' './dist/assets/css/main.css'",
+    "styles:prod": "sass --no-source-map --style=compressed './src/assets/scss/main.scss' './dist/assets/css/main.css'",
+    "poststyles:prod": "postcss './dist/assets/css/main.css' --replace --no-map --use autoprefixer",
+    "scripts:prod": "webpack --config './webpack.config.js' --mode production",
+    "scripts:dev": "webpack --config './webpack.config.js' --mode development",
+    "server": "browser-sync start --server './dist' --files './dist' --no-open",
+    "eleventy": "npx eleventy --quiet",
+    "watch:eleventy": "npx eleventy --watch --quiet",
+    "watch:scripts": "onchange './src/assets/js/**/*' -- npm run scripts:dev",
+    "watch:styles": "onchange './src/assets/scss/**/*' -- npm run styles:dev",
+    "build": "npm-run-all clean --parallel styles:prod scripts:prod eleventy",
+    "watch": "npm-run-all --parallel server watch:*",
+    "dev": "npm run watch"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.0",
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "acorn": "^7.2.0",
-    "autoprefixer": "^9.8.0",
-    "babel-loader": "^8.1.0",
-    "browser-sync": "^2.26.7",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.1.0",
-    "eslint-loader": "^4.0.2",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.2.1",
-    "gulp-postcss": "^8.0.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
-    "moment": "^2.26.0",
-    "webpack": "^4.43.0"
+    "@11ty/eleventy": "^0.11.1",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "browser-sync": "^2.26.14",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "postcss-cli": "^8.3.1",
+    "rimraf": "^2.7.1",
+    "sass": "^1.32.8",
+    "webpack": "^5.26.2",
+    "webpack-cli": "^4.5.0"
   }
 }
