--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   ],
   "scripts": {
     "clean": "rimraf './dist'",
-    "styles:dev": "sass './src/assets/scss/main.scss' './dist/assets/css/main.css'",
-    "styles:prod": "sass --no-source-map --style=compressed './src/assets/scss/main.scss' './dist/assets/css/main.css'",
-    "poststyles:prod": "postcss './dist/assets/css/main.css' --replace --no-map --use autoprefixer",
+    "styles:dev": "sass --source-map --embed-source-map --source-map-urls absolute './src/assets/scss/main.scss' './dist/assets/css/main.css'",
+    "styles:prod": "sass --no-source-map './src/assets/scss/main.scss' './dist/assets/css/main.css'",
+    "poststyles:prod": "postcss './dist/assets/css/main.css' --replace --no-map --use autoprefixer cssnano",
     "scripts:prod": "webpack --config './webpack.config.js' --mode production",
     "scripts:dev": "webpack --config './webpack.config.js' --mode development",
-    "server": "browser-sync start --server './dist' --files './dist' --no-open",
+    "server": "browser-sync start --server './dist' --serveStatic './dist' --files './dist' --no-open",
     "eleventy": "npx eleventy --quiet",
     "watch:eleventy": "npx eleventy --watch --quiet",
     "watch:scripts": "onchange './src/assets/js/**/*' -- npm run scripts:dev",
@@ -29,12 +29,13 @@
     "dev": "npm run watch"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1",
+    "@11ty/eleventy": "^0.12.1",
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.14",
+    "cssnano": "^4.1.10",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "npm-run-all": "^4.1.5",
