--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
   },
   "browserslist": [
     "last 2 versions",
-    "not ie <= 11"
+    "not IE <= 11"
   ],
   "scripts": {
-    "clean": "rimraf './dist'",
-    "styles:dev": "sass --source-map --embed-source-map --source-map-urls absolute ./src/assets/scss/main.scss dist/assets/css/main.css",
-    "styles:prod": "sass --no-source-map src/assets/scss/main.scss dist/assets/css/main.css",
+    "clean": "rimraf dist",
+    "styles:dev": "sass --source-map --embed-source-map --source-map-urls=absolute ./src/assets/scss/main.scss dist/assets/css/main.css",
+    "styles:prod": "sass --no-source-map --style=compressed src/assets/scss/main.scss dist/assets/css/main.css",
     "poststyles:prod": "postcss dist/assets/css/main.css --replace --no-map --use autoprefixer cssnano",
     "scripts:prod": "webpack --config webpack.config.js --mode production",
     "scripts:dev": "webpack --config webpack.config.js --mode development",
-    "server": "browser-sync start --server dist --serveStatic dist --files dist --no-open",
+    "server": "browser-sync start --server \"dist\" --files \"dist\" --no-open",
     "eleventy": "npx eleventy --quiet",
     "watch:eleventy": "npx eleventy --watch --quiet",
-    "watch:scripts": "onchange 'src/assets/js/**/*' -- npm run scripts:dev",
-    "watch:styles": "onchange 'src/assets/scss/**/*' -- npm run styles:dev",
+    "watch:scripts": "onchange \"src/assets/js/**/*\" -- npm run scripts:dev",
+    "watch:styles": "onchange \"src/assets/scss/**/*\" -- npm run styles:dev",
     "build": "npm-run-all clean --parallel styles:prod scripts:prod eleventy",
     "watch": "npm-run-all --parallel server watch:*",
     "dev": "npm run watch"
