Use locally installed version

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "scripts:prod": "webpack --config webpack.config.js --mode production",
     "scripts:dev": "webpack --config webpack.config.js --mode development",
     "server": "browser-sync start --server \"dist\" --files \"dist\" --no-open",
-    "eleventy": "npx eleventy --quiet",
-    "watch:eleventy": "npx eleventy --watch --quiet",
+    "eleventy": "npx @11ty/eleventy --quiet",
+    "watch:eleventy": "npx @11ty/eleventy --watch --quiet",
     "watch:scripts": "onchange \"src/assets/js/**/*\" -- npm run scripts:dev",
     "watch:styles": "onchange \"src/assets/scss/**/*\" -- npm run styles:dev",
     "build": "npm-run-all clean --parallel styles:prod scripts:prod eleventy",
