--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "styles:dev": "sass --source-map --embed-source-map --source-map-urls=absolute ./src/assets/scss/main.scss dist/assets/css/main.css",
     "styles:prod": "sass --no-source-map --style=compressed src/assets/scss/main.scss dist/assets/css/main.css",
     "poststyles:prod": "postcss dist/assets/css/main.css --replace --no-map --use autoprefixer cssnano",
-    "scripts:prod": "webpack --config webpack.config.js --mode production",
-    "scripts:dev": "webpack --config webpack.config.js --mode development",
+    "scripts:prod": "esbuild ./src/assets/js/main.js --target=es6 --bundle --minify --outfile=./dist/assets/js/main.bundle.js",
+    "scripts:dev": "esbuild ./src/assets/js/main.js --target=es6 --bundle --outfile=./dist/assets/js/main.bundle.js",
     "server": "browser-sync start --server \"dist\" --files \"dist\" --no-open",
     "eleventy": "npx @11ty/eleventy --quiet",
     "watch:eleventy": "npx @11ty/eleventy --watch --quiet",
@@ -30,21 +30,17 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.5",
-    "autoprefixer": "^10.2.6",
-    "babel-loader": "^8.2.2",
-    "browser-sync": "^2.26.14",
-    "cssnano": "^5.0.6",
+    "autoprefixer": "^10.3.1",
+    "browser-sync": "^2.27.5",
+    "cssnano": "^5.0.7",
+    "esbuild": "^0.12.16",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
-    "postcss": "^8.3.5",
+    "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "rimraf": "^3.0.2",
-    "sass": "^1.35.1",
-    "webpack": "^5.39.1",
-    "webpack-cli": "^4.7.2"
+    "sass": "^1.36.0"
   }
 }
