--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "cssnano": "^5.0.8",
     "esbuild": "^0.13.8",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
+    "luxon": "^1.28.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
     "postcss": "^8.3.9",
