--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "url": "https://github.com/jeromecoupe/eleventy_starter.git"
   },
   "browserslist": [
-    "last 2 versions",
-    "not IE <= 11"
+    "> 0.5%",
+    "not IE 11",
+    "not dead"
   ],
   "scripts": {
     "clean": "rimraf dist",
@@ -30,17 +31,17 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
-    "autoprefixer": "^10.3.7",
-    "browser-sync": "^2.27.5",
-    "cssnano": "^5.0.8",
-    "esbuild": "^0.13.8",
+    "autoprefixer": "^10.4.0",
+    "browser-sync": "^2.27.7",
+    "cssnano": "^5.0.10",
+    "esbuild": "^0.13.12",
     "lodash": "^4.17.21",
-    "luxon": "^1.28.0",
+    "luxon": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
-    "postcss": "^8.3.9",
-    "postcss-cli": "^9.0.1",
+    "postcss": "^8.3.11",
+    "postcss-cli": "^9.0.2",
     "rimraf": "^3.0.2",
-    "sass": "^1.43.2"
+    "sass": "^1.43.4"
   }
 }
